--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     .seg { display:flex; gap:4px; border:1px solid #e5e7eb; border-radius:999px; padding:3px; background:#fff; }
     .seg button { padding:4px 10px; border:none; background:transparent; border-radius:999px; cursor:pointer; font-size:13px; }
     .seg button.active { background:#0b1320; color:#fff; }
-    #board { max-width: 720px; margin: 0 auto; }
+    /* ここが重要：初期サイズを必ず付ける */
+    #board { width: min(96vw, 640px); height: min(96vw, 640px); margin: 0 auto; }
     .status { font-size:14px; }
     .section-title { font-weight:700; margin:8px 0 12px; }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <!-- ヘッダー -->
     <div class="row" style="margin-bottom:12px">
       <div class="title">転生チェス — Reincarnation Chess (MVP)</div>
       <label class="row" style="gap:6px">
@@ -51,7 +51,6 @@
     </div>
 
     <div class="grid">
-      <!-- 左：盤 -->
       <div class="card">
         <div class="row" style="justify-content:space-between; margin-bottom:10px">
           <h3 style="margin:0">Board</h3>
@@ -71,7 +70,6 @@
         </div>
       </div>
 
-      <!-- 右：キュー/ログ/ルール -->
       <div class="stack">
         <div class="card">
           <div class="section-title">転生待ちキュー</div>
@@ -115,11 +113,11 @@
     };
 
     // ===== 状態 =====
-    let HUMAN = 'w';          // 人間の色
-    let game = new Chess();   // ルール
-    let board = null;         // 盤UI
-    let queue = [];           // 転生待ち [{color, original, id}]
-    let promo = 'q';          // 昇格先
+    let HUMAN = 'w';
+    let game = new Chess();
+    let board = null;
+    let queue = [];
+    let promo = 'q';
 
     // ===== DOM =====
     const statusEl = document.getElementById('status');
@@ -135,7 +133,6 @@
       });
     });
 
-    // ===== 表示系 =====
     function updateStatus(textExtra=''){
       let s = game.isCheckmate() ? 'チェックメイト！'
             : game.isStalemate() ? 'ステイルメイト'
@@ -165,7 +162,6 @@
       logEl.insertBefore(li, logEl.firstChild);
     }
 
-    // ===== 転生 =====
     function reincarnateIfAny(color){
       const idx = queue.findIndex(q => q.color === color);
       if (idx === -1) return false;
@@ -185,7 +181,6 @@
       return true;
     }
 
-    // ===== AI =====
     function aiMaterial(forColor){
       let s=0;
       for (const row of game.board()){
@@ -208,23 +203,19 @@
     }
     function aiTurn(){
       if (game.game_over() || game.turn()!=='b') return;
-      reincarnateIfAny('b');         // AI手番開始 → 転生
+      reincarnateIfAny('b');
       const moves = game.moves({ verbose:true });
       if (!moves.length){ updateStatus(); return; }
       let best = moves[0], bestScore = -Infinity;
       for (const m of moves){ const s = aiEval(m); if (s > bestScore){ bestScore = s; best = m; } }
       doMove(best.from, best.to, best.promotion);
-      if (game.turn()==='w'){        // AIの手後、白手番開始 → 白の転生
-        reincarnateIfAny('w');
-      }
+      if (game.turn()==='w'){ reincarnateIfAny('w'); }
       updateStatus();
     }
 
-    // ===== 共通：指し手適用 =====
     function doMove(from, to, promotion){
       const res = game.move({ from, to, promotion });
       if (!res) return false;
-
       if (res.captured){
         const capturedType = res.captured;
         const capturedColor = res.color === 'w' ? 'b' : 'w';
@@ -237,39 +228,34 @@
       return true;
     }
 
-    // ===== 盤UIイベント =====
     function onDragStart (source, piece) {
       if (game.game_over()) return false;
       if (game.turn() !== HUMAN) return false;
       if ((HUMAN === 'w' && piece.startsWith('b')) || (HUMAN === 'b' && piece.startsWith('w'))) return false;
     }
     function onDrop (source, target) {
-      // 昇格判定
       const moving = game.get(source);
       const isPromo = moving && moving.type==='p' &&
         ((HUMAN==='w' && /8$/.test(target)) || (HUMAN==='b' && /1$/.test(target)));
 
       const tryMove = { from: source, to: target, promotion: isPromo ? promo : undefined };
       const result = game.move(tryMove);
-      if (result === null) return 'snapback'; // 非合法
-      game.undo(); // 共通処理のため一旦戻す
+      if (result === null) return 'snapback';
+      game.undo();
       doMove(source, target, isPromo ? promo : undefined);
 
-      // 人間手後 → 相手手番開始：相手の転生→AI着手
       setTimeout(()=> {
-        if (HUMAN==='w'){ // 相手は黒
+        if (HUMAN==='w'){
           reincarnateIfAny('b');
           updateStatus();
           setTimeout(aiTurn, 140);
-        } else {          // 相手は白（HUMANは黒）＝AIが先手
-          // 次の手番は白→ ここではAIではなく、白の手が終わっているので黒手番開始＝黒の転生
-          reincarnateIfAny('w'); // 念のため白側も処理（通常ここは不要）
+        } else {
+          reincarnateIfAny('w');
         }
       }, 120);
     }
     function onSnapEnd () { board.position(game.fen()); }
 
-    // ===== 新規開始 =====
     function startNew(side){
       HUMAN = side; queue = []; game = new Chess();
       const orient = (HUMAN==='w') ? 'white' : 'black';
@@ -277,17 +263,13 @@
       board.position('start', false);
       logEl.innerHTML = ''; log('新規ゲーム開始。' + (HUMAN==='w'?'白':'黒') + 'でプレイ。');
       renderQueue(); updateStatus();
-
-      // 先手がAIの場合（HUMAN=黒）→ 白の手番でAIが指す前に白の転生
       if (HUMAN==='b'){
         setTimeout(()=>{
-          reincarnateIfAny('w'); // 白の転生（置けなければ何も起きない）
+          reincarnateIfAny('w');
           updateStatus('（AI思考中…）');
           setTimeout(()=>{
-            // 白＝AIで1手指す
             const moves = game.moves({ verbose:true });
             if (moves.length){
-              // シンプルに最良手を選ぶ（白側評価に合わせて符号反転）
               let best=moves[0], bestScore=-Infinity;
               for (const m of moves){
                 const clone = new Chess(game.fen()); const r=clone.move(m);
@@ -299,7 +281,6 @@
               }
               doMove(best.from, best.to, best.promotion);
             }
-            // 黒（人間）手番開始 → 黒の転生
             if (game.turn()==='b') { reincarnateIfAny('b'); }
             updateStatus();
           }, 180);
@@ -307,17 +288,22 @@
       }
     }
 
-    // ===== 初期化 =====
     function init(){
-      board = Chessboard('board', {
-        position: 'start',
-        draggable: true,
-        pieceTheme: 'https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/img/chesspieces/wikipedia/{piece}.png',
-        onDragStart, onDrop, onSnapEnd,
-        orientation: 'white'
-      });
+      try{
+        board = Chessboard('board', {
+          position: 'start',
+          draggable: true,
+          pieceTheme: 'https://cdnjs.cloudflare.com/ajax/libs/chessboard.js/1.0.0/img/chesspieces/wikipedia/{piece}.png',
+          onDragStart, onDrop, onSnapEnd,
+          orientation: 'white'
+        });
+        // 初期リサイズ（ここ重要）
+        board.resize();
+      } catch (e){
+        console.error(e);
+        log('❗盤の初期化に失敗しました。ネットワークやContent Blockerを確認してください。');
+      }
       renderQueue(); log('新規ゲーム開始。白の手番。'); updateStatus();
-      // レスポンシブ
       window.addEventListener('resize', () => board && board.resize());
     }
     window.addEventListener('load', init);
